# SICrMLB

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
sicrmlb/gamestate/: _base.py  _types.py  _units.py
sicrmlb/gamestate/arena/: _constants.py
sicrmlb/gamestate/classification/: unit_data.yaml
sicrmlb/gamestate/deck/: _constants.py  _types.py  detector.py
sicrmlb/gamestate/elixir/: _constants.py  _types.py  detector.py
sicrmlb/utils/device/: __init__.py  _constants.py  _types.py  adb.py  capture.py  decoder.py
sicrmlb/utils/ffmpeg/: wrapper.py
tests/detectors/: elixir_detector_test.py
tools/: generate_unit_data.py
