[project]
name = "SICrMLB"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "artumont", email = "197291181+artumont@users.noreply.github.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
