[project]
name = "sicrmlb"
version = "0.1.0"
description = "A non-embeded ML bot for Clash Royale based on RL and CV, heavily inspired by KataCr"
authors = [
    {name = "artumont",email = "197291181+artumont@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "av (>=16.0.1,<17.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
